--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.11",
+        "@fullcalendar/daygrid": "^6.1.11",
+        "@fullcalendar/interaction": "^6.1.11",
+        "@fullcalendar/timegrid": "^6.1.11",
+        "@fullcalendar/vue3": "^6.1.11",
         "ant-design-vue": "^4.1.2",
         "bootstrap": "^5.3.3",
         "pinia": "^2.1.7",
